<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PureFM</string>
    
    <string name="root">root</string>
    <string name="empty">Empty</string>
    <string name="minus">-</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    
    <string name="remove">Remove</string>
    <string name="search_files">Search files</string>
    <string name="no_results">No Results</string>
    
    <string name="rename">Rename</string>
    <string name="new_name">New Name</string>
    
    <string name="no_apps_to_open">No applications installed to open this file</string>
    <string name="could_not_open_file_">Could open this file:u0020</string>
    
    <string name="menu_refresh">Refresh</string>
    <string name="menu_partition">Partition Info</string>
    <string name="menu_search">Search</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_bookmarks_new">Add current location</string>
    <string name="menu_new_file">New File</string>
    <string name="menu_new_folder">New Folder</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_view_as_list">View as List</string>
    <string name="menu_view_as_grid">View as Grid</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_by_name_asc">By name ascending</string>
    <string name="menu_sort_by_name_desc">By name descending</string>
    <string name="menu_sort_by_type_asc">By type ascending</string>
    <string name="menu_sort_by_type_desc">By type descending</string>
    <string name="menu_sort_by_date_asc">By date ascending</string>
    <string name="menu_sort_by_date_desc">By date descending</string>
    <string name="menu_sort_by_size_asc">By size ascending</string>
    <string name="menu_sort_by_size_desc">By size descending</string>
    
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_cut">Cut</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_properties">Properties</string>
    
    <string name="menu_select_all">Select all</string>
    
    <string name="_selected">\u0020selected</string>
    
    <!-- Preferences -->
    <string name="preference_category_view">View Settings</string>
    <string name="preference_appearance">Appearance</string>
    <string name="preference_show_hidden">Show hidden files</string>
    <string name="preference_show_permissions">Show permissions</string>
    <string name="preference_show_preview">Show previews</string>
    <string name="preference_show_modified">Show modified time</string>
    <string name="preference_show_size">Show size</string>
    
    <string name="preference_category_performance">Performance</string>
    <string name="preference_use_commandline">Use Busybox</string>
    <string name="preference_allow_root">Allow root access</string>
    
    <string name="preference_category_startup">Startup</string>
    <string name="preference_home_directory">Home directory</string>
    
    <!-- Units -->
<!--     <string name="unit_bytes">B</string> -->
<!--     <string name="unit_kib">KiB</string> -->
<!--     <string name="unit_mib">MiB</string> -->
<!--     <string name="unit_gib">GiB</string> -->
    
    <!-- New File / Directory -->
    <string name="name_empty">Name field is empty</string>
    <string name="invalid_filename">Not a valid file name</string>
    <string name="file_exists">File already exists</string>
    <string name="could_not_create_dir">Could not create directory</string>
    <string name="could_not_create_file">Could not create file</string>
    <string name="dialog_new_folder_title">Create New Directory</string>
    <string name="dialog_new_file_title">Create New File</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    
    <!-- New Bookmark -->
    <string name="bookmark_added">The bookmark was added</string>
    <string name="bookmark_exists">The bookmark already exists</string>
    <string name="bookmark_not_added">Could not add bookmark</string>
    
    <!-- Progress -->
    <string name="progress_deleting_files">Deleting file(s)</string>
<!--     <string name="progress_deleted">Deleted\u0020</string> -->
    <string name="_files">\u0020file(s)</string>
<!--     <string name="_dirs">\u0020directories(s)</string> -->
    
    <string name="progress_moving">Moving\u0020</string>
    <string name="progress_copying">Copying\u0020</string>
    
    <!-- Copy / Cut -->
    <string name="cut_">Cut\u0020</string>
    <string name="copied_">Copied\u0020</string>
<!--     <string name="moved_">Moved\u0020</string> -->
<!--     <string name="pasted_">Pasted\u0020</string> -->
<!--     <string name="error_copying_file">Error copying file:\u0020</string> -->
<!--     <string name="error_moving_file">Error moving file:\u0020</string> -->
    
    <string name="dialog_overwrite_title">Target file already exists</string>
    <string name="dialog_overwrite_message">This action will overwrite destination.</string>
    <string name="dialog_overwrite_source">Source</string>
    <string name="dialog_overwrite_destination">Destination</string>
    <string name="dialog_overwrite_abort">Abort</string>
    <string name="dialog_overwrite_skip">Skip</string>
    <string name="dialog_overwrite_skip_all">Skip all</string>
    <string name="dialog_overwrite_replace">Replace</string>
    <string name="dialog_overwrite_replace_all">Replace all</string>
    
    <!-- Delete -->
    <string name="dialog_delete_title">The following files will be deleted:</string>
    
    <!-- Permissions -->
<!--     <string name="apply">Apply</string> -->
    <string name="applying_failed">Applying failed</string>
    <string name="permissions_changed">Permissions changed</string>
<!--     <string name="cannot_set_msdos">Cannot change permissions on this file system</string> -->
<!--     <string name="cannot_set_permissions_java">Can only set permissions in busybox mode</string> -->
    
    <string name="owner">Owner:</string>
    <string name="group">Group:</string>
    <string name="others">Others:</string>
    
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="execute">Execute</string>
    
    <!-- Properties -->
    <string name="info">Info</string>
    <string name="permissions">Permissions</string>
    
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="mime">Mime:</string>
    <string name="size">Size:</string>
    <string name="modified">Modified:</string>
    
    <string name="type_file">File</string>
    <string name="type_directory">Directory</string>
    <string name="type_symlink">Symlink</string>
    
    <string name="location">Location:</string>
    <string name="filesystem">Filesystem:</string>
    <string name="total">Total space:</string>
    <string name="free">Free space:</string>
    <string name="available">Available space:</string>
    <string name="block_size">Block size:</string>
    <string name="used">Used:</string>
    
    <!-- Search -->
    <string name="search_denied_message">The following locations require root access. Would you like to search there?</string>
    
    <!-- Quit Dialog -->
    <string name="dialog_quit_message">Do you want to quit?</string>

</resources>